# fastdash

./: .env.example  .envrc.example  .gitattributes  .gitignore  CLAUDE.md  DESIGN.md  LICENSE  README.md  commitlint.config.js  eslint.config.js  index.html  package-lock.json  package.json  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: pr-checks.yml  release.yml
.husky/: commit-msg  pre-commit
bucket/: fastdash.json
docs/: index.html  install.ps1
locales/en/: app.json  claude.json  github.json  slack.json
scripts/: bump-version.sh
src/: App.tsx  ErrorBoundary.tsx  Settings.tsx  config.ts  devmode.ts  flash.ts  i18n.ts  main.tsx  styles.css  theme.ts  types.ts  updater.ts
src-tauri/: .gitignore  Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: ipc.rs  lib.rs  main.rs
src-tauri/src/connectors/: mod.rs
src-tauri/src/connectors/claude/: aggregate.rs  mod.rs  parse.rs  pricing.rs  usage_api.rs
src-tauri/src/connectors/github/: aggregate.rs  client.rs  config.rs  device_flow.rs  mod.rs
src-tauri/src/connectors/slack/: api.rs  mod.rs  token.rs
src-tauri/src/engine/: cache.rs  config.rs  connector.rs  i18n.rs  mod.rs  panel.rs  registry.rs  scheduler.rs  secrets.rs
src/connectors/: ConnectorsPage.tsx  GithubConnector.tsx  index.ts  types.ts
