[package]
name = "fastdash"
version = "0.1.0"
description = "A super-fast Claude usage + connectors dashboard"
edition = "2021"
rust-version = "1.77"

# The Tauri app is split into a lib (the actual app) and a thin main binary
# so the same code can target desktop and (later) mobile.
[lib]
name = "fastdash_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
async-trait = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "fs"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2"

# --- Shared connector deps, pre-declared so per-connector worktrees never
# --- collide on Cargo.toml. Each connector uses the subset it needs.
reqwest = { version = "0.12", features = ["json"] }
notify = "6"
keyring = { version = "3", features = ["windows-native"] }
toml = "0.8"
directories = "5"
futures = "0.3"

# Smaller, faster release binaries.
[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
panic = "abort"
